Remove UndoDiscard and move its state into UndoLogControl.
Previously, a per-undo log object "UndoDiscard" was used to track the progress
of the undo worker machinery.  It was in a shared memory array of fixed size,
which isn't going to work.  Move that state into the UndoLogControl object for
each undo log.

Since this change requires undodiscard.c to have direct access to
UndoLogControl objects and to iterate over them, create new functions
UndoLogNext(), UndoLogGet() with extern linkage to do that.  A better
interface is probably needed -- to review later when we work out the type of
access that multi-process undo worker infrastructure will need.

Register the LWLock tranches.

Thomas Munro, RM43420, reviewed by Dilip Kumar and Amit Kapila

--- a/src/backend/access/zheap/README
+++ b/src/backend/access/zheap/README
@@ -567,12 +567,12 @@ record and in the meantime undo worker discards the corresponding undo record.
 To handle such race conditions, we need to maintain some synchronization
 between backends and undo worker so that backends don’t try to access already
 discarded undo.  So whenever undo fetch is trying to read a undo record from
-an undo log, first it needs to acquire a DiscardXact.mutex in SHARED mode for
+an undo log, first it needs to acquire a log->discard_lock in SHARED mode for
 the undo log and check that the undo record pointer is not less than
-DiscardXact.undo_recptr, if so, then don’t fetch that undo record and return
+log->oldest_data, if so, then don't fetch that undo record and return
 NULL (that means the previous version is all visible).  And undo worker will
-take the DiscardXact.mutex in EXCLUSIVE mode for updating the
-DiscardXact.undo_recptr. We hold this lock just to update the value in shared
+take log->discard_lock in EXCLUSIVE mode for updating the
+log->oldest_data. We hold this lock just to update the value in shared
 memory, the actual discard happens outside this lock.
 
 Undo Log Storage
