Move the tuple manipulation related API's to a new file ztuple.c.
This helps us to better segregate the tuple manipulation related code in
one file.

Suggested by Robert Haas, patch by Amit Kapila

--- a/src/backend/access/zheap/README
+++ b/src/backend/access/zheap/README
@@ -283,7 +283,7 @@ We don’t need alignment padding between the tuple header and the tuple data as
 we always make a copy of the tuple to support in-place updates. Likewise, we ideally
 don't need any alignment padding between tuples. However, there are places in zheap
 code where we access tuple header directly from page (ex. zheap_delete, zheap_update,
-etc.) for which we them to be aligned at two-byte boundary).
+etc.) for which we want them to be aligned at two-byte boundary).
 
 Undo chain
 -----------
